--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,11 +3,23 @@
 {% block content %}
     <h1>Shopping List Page</h1>
 
-    <h5>Name:</h5>
+    <h5 class = "nama">Name:</h5>
     <p>{{name}}</p>
 
     <h5>Class:</h5>
     <p>{{class}}</p>
+
+    <style>
+
+        th{
+            padding-right: 20px;
+        }
+
+        td{
+            padding-right: 20px;
+            padding-top: 5px;
+        }
+    </style>
 
     
     <table>
@@ -26,6 +38,17 @@
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.date_added}}</td>
+                <td>
+                    <a href="{% url 'main:edit_product' product.pk %}">
+                        <button>
+                            Edit
+                        </button>
+                    <a href="{% url 'main:delete_product' product.pk %}">
+                        <button>
+                            Delete
+                        </button>
+                    </a>
+                </td>
             </tr>
         {% endfor %}
     </table>
